Just extending the application some more... Adds common errors page Adds Basic info page Adds some more descriptive elements to existing pages

--- a/assets/css/validate-me.css
+++ b/assets/css/validate-me.css
@@ -30,3 +30,11 @@ background: #ddd;
 .error, .fatal, .warning {
 width:15%;
 }
+.hero-unit p.text-error {
+color: #B94A48;
+font-size:1.2em;
+}
+.hero-unit p.text-info {
+color: #3A87AD;
+font-size:1.2em;
+}
