A couple of fundamental changes All files are now saved with an _timestamp. This allows the same file to be uploaded by two people at the same time (maybe we can use this to allow other people to see the same file..) So some changes are to display this time to the user. Added a basic stats page with 9 key feedback elements. The data is stored as json to allow us to download it later if we like. Thinking it's a good idea to move to this way of doing things. Once stuff has been processed once then it doesn't need processing again. Tidied up the index.php file a bit as well. Todo: Need to consolidate functions ino one place.

--- a/assets/css/validate-me.css
+++ b/assets/css/validate-me.css
@@ -1,5 +1,16 @@
 /*Custom CSS file for the Validate Me Application*/
 /*This CSS should override all other CSS*/
+body {
+/*padding-top: 60px;*/
+padding-bottom: 40px;
+}
+.navbar-static-top {
+  padding-bottom: 20px;
+}
+legend {
+  display:none;
+}
+
 
 .reset {
 text-align:right;
