Fixes #51 Puts a test page banner on the site

--- a/assets/css/validate-me.css
+++ b/assets/css/validate-me.css
@@ -62,3 +62,9 @@ color: #3A87AD;
 #version-drop-down, #switch {
 width:120px;
 }
+
+#development {
+background: paleturquoise;
+color: #000;
+text-align: center;
+}
